# argus-region-intelligence

./: README.md  pyproject.toml
demo/city-dataset/: evaluation_schema.json  ground_truth.json  ground_truth_with_evaluators.json  output_schema.json
demo/city-dataset/tmp/: output.json
demo/default-dataset/: eval_data.jsonl
frontend/: explore_data.py
infra/: main.bicep
notebooks/: .env  evaluator.ipynb
notebooks/outputs/: output_09_08.16.18.07.json
src/functionapp/: function_app.py  requirements.txt
