[tool.poetry]
name = "argus-azure-ri"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.20.0"
openai = "^1.44.0"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
requests-html = "^0.10.0"
azure-cosmos = "^4.7.0"
azure-ai-documentintelligence = "^1.0.0b4"
azure-identity = "^1.17.1"
pymupdf = "^1.24.10"
langchain = "^0.2.16"
langchain-core = "^0.2.38"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
tiktoken = "^0.7.0"
python-multipart = "^0.0.9"
promptflow-evals = "^0.3.2"
jsonpath-ng = "^1.6.1"
thefuzz = "^0.22.1"
seaborn = "^0.13.2"
streamlit = "^1.38.0"
pandas = "^2.2.2"
plotly = "^5.24.0"
azure-storage-blob = "^12.22.0"
streamlit-pdf-viewer = "^0.0.17"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
